@@ -771,6 +771,16 @@ name|getRegionName
 argument_list|()
 argument_list|)
 operator|+
+literal|"/"
+operator|+
+name|r
+operator|.
+name|getRegionInfo
+argument_list|()
+operator|.
+name|getEncodedName
+argument_list|()
+operator|+
 operator|(
 name|why
 operator|!=
