@@ -128,6 +128,8 @@ Release 0.19.0 - Unreleased
    HBASE-1097  SequenceFile.Reader keeps around buffer whose size is that of
                largest item read -> results in lots of dead heap
    HBASE-1107  NPE in HStoreScanner.updateReaders
+   HBASE-1083  Will keep scheduling major compactions if last time one ran, we
+               didn't.
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
